--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
   "dependencies": {
     "font-awesome": "^4.6.3",
     "normalize-css": "^2.3.1",
+    "router": "^1.1.4",
+    "vue": "^2.0.3",
+    "vueify": "^9.2.4",
     "whatwg-fetch": "^1.0.0",
     "yoga-sass": "^1.0.1"
   },
