--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "babel-plugin-transform-object-rest-spread": "^6.16.0",
+    "bulma": "^0.2.3",
     "font-awesome": "^4.6.3",
     "normalize-css": "^2.3.1",
     "router": "^1.1.4",
