--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "normalize-css": "^2.3.1",
     "router": "^1.1.4",
     "vue": "^2.0.3",
+    "vue-router": "^2.0.1",
     "vueify": "^9.2.4",
     "whatwg-fetch": "^1.0.0",
     "yoga-sass": "^1.0.1"
@@ -44,9 +45,11 @@
     "envify": "^3.4.1",
     "eslint": "^2.4.0",
     "eslint-config-rtablada": "^3.1.0",
+    "eslint-plugin-html": "^1.5.5",
     "loader.js": "^4.0.11",
     "sass-lint": "^1.9.1",
     "testem": "^1.11.0",
+    "vueify": "^9.2.4",
     "yarn": "^0.16.1"
   }
 }
